traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:0: error: not found: value cpt
class TraversalByColumn extends SimpleBuggle {override def run() {cpt=0;do{for (i<- 0 to (getMondeLargeur()-1))
                                                                  ^TraversalByColumn:1: error: not found: value getMondeLongeur
                             {for(j<- 0 to( getMondeLongeur-1)){cpt+=1;setPos(i,j);ecritMessage(cpt)}}};
                                            ^TraversalByColumn:1: error: not found: value cpt
                             {for(j<- 0 to( getMondeLongeur-1)){cpt+=1;setPos(i,j);ecritMessage(cpt)}}};
                                                                ^TraversalByColumn:1: error: not found: value cpt
                             {for(j<- 0 to( getMondeLongeur-1)){cpt+=1;setPos(i,j);ecritMessage(cpt)}}};
                                                                                                ^TraversalByColumn:2: error: value unary_! is not a member of Unit
                    while(!fin())
                          ^TraversalByColumn:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else return false} 
                                                                                     ^TraversalByColumn:5: warning: enclosing method fin has result type Unit: return value discarded
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else return false} 
                                                                              ^TraversalByColumn:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else return false} 
                                                                                                       ^TraversalByColumn:5: warning: enclosing method fin has result type Unit: return value discarded
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else return false} 
                                                                                                ^